Fix text and menu z-index

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 100; //change to 1
   opacity: 1;
   transition: $transition;
 
