--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -17,7 +17,7 @@
   }
 
   &__content-container {
-    z-index: 999;
+    z-index: 999; //delete
     position: absolute;
     top: 0;
     left: 0;
@@ -25,16 +25,17 @@
     height: 100%;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
+    color: #fff;
     background-color: $color-background-project;
     transition: $transition;
     opacity: 0;
   }
 
   &__title {
-    color: #fff;
     font-size: 24px;
     letter-spacing: 0.1em;
     font-weight: 200;
@@ -43,6 +44,14 @@
 
     @include onTablet {
       font-size: 36px;
+    }
+  }
+
+  &__subtitle {
+    font-size: 20px;
+
+    @include onTablet {
+      font-size: 30px;
     }
   }
 }
